# focused-resume

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  db.sqlite3  experiments.ipynb  index.html  pyproject.toml  requirements.txt  todo.md  topic_modeling _lda_lsa.ipynb
.ipynb_checkpoints/: experiments-checkpoint.ipynb
api/: admin.py  apps.py  models.py  urls.py  views.py
api/experiments/: job_description.txt  pdf_text.txt
api/management/commands/: similarity.py  test_kb.py  upload_skills.py  vectorize_skill.py
api/migrations/: 0001_initial.py  0002_resume_submission.py
api/services/: analyze_gliner.py  analyze_text.py  clean_linkedin_url.py  compare_cv_to_job.py  skill_blacklist.py
backend/: settings.py  urls.py
frontend/: index.html  package-lock.json  package.json
frontend/components/: SkillCard.tsx
frontend/src/: App.tsx  index.css
frontend/src/components/: MatchSkillCard.tsx  MissingSkillCard.tsx  OverallMatchCard.tsx  SkeletonDemo.tsx  SkillFooterCard.tsx  SkillFooterInfo.tsx  SkillsDisplayCard.tsx
new_backend/: analyze_text.py  clean_linkedin_url.py  compare_cv_to_job.py  skill_blacklist.py  views2.py
src/: App.tsx
