[project]
name = "focused-resume"
version = "0.1.0"
description = ""
authors = [
    {name = "Dor Lazarov",email = "lazamal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
package-mode = false
dependencies = [
    "spacy (>=3.8.11,<4.0.0)",
    "pymupdf (>=1.27.1,<2.0.0)",
    "trafilatura (>=2.0.0,<3.0.0)",
    "urllib3 (>=2.6.3,<3.0.0)",
    "playwright (>=1.58.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "nltk (>=3.9.3,<4.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "gensim (>=4.4.0,<5.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
