[project]
name = "focused-resume"
version = "0.1.0"
description = ""
authors = [
    {name = "Dor Lazarov",email = "lazamal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
package-mode = false
dependencies = [
    "spacy (>=3.8.11,<4.0.0)",
    "pymupdf (>=1.27.1,<2.0.0)",
    "trafilatura (>=2.0.0,<3.0.0)",
    "playwright (>=1.58.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "nltk (>=3.9.3,<4.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "gensim (>=4.4.0,<5.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "spacy-lookups-data (>=1.0.5,<2.0.0)",
    "huggingface-hub (<1.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "transformers (<5.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
    "accelerate (>=1.13.0,<2.0.0)",
    "bitsandbytes (>=0.49.2,<0.50.0)",
    "gliner (>=0.2.25,<0.3.0)",
    "django-environ (==0.9.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "urllib3 (<2.0.0)",
    "django (>=6.0.3,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "gunicorn (==20.1.0)",
    "whitenoise (>=6.12.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
