[project]
name = "focused-resume"
version = "0.1.0"
description = ""
authors = [
    {name = "Dor Lazarov",email = "lazamal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
package-mode = false
dependencies = [
    "spacy (>=3.8.11,<4.0.0)",
    "pymupdf (>=1.27.1,<2.0.0)",
    "trafilatura (>=2.0.0,<3.0.0)",
    "playwright (>=1.58.0,<2.0.0)",
    "urllib3 (<2.0.0)",
    "requests-toolbelt (>=1.0.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
